Package_Tools/include-C/gmp/gmp_backup.pas

function mpq_equal(para1: Tmpq_srcptr; para2: Tmpq_srcptr): longint; cdecl; external libgmp name '__gmpq_equal';
procedure mpq_get_num(para1: Tmpz_ptr; para2: Tmpq_srcptr); cdecl; external libgmp name '__gmpq_get_num';
procedure mpq_get_den(para1: Tmpz_ptr; para2: Tmpq_srcptr); cdecl; external libgmp name '__gmpq_get_den';
function mpq_get_d(para1: Tmpq_srcptr): double; cdecl; external libgmp name '__gmpq_get_d';
function mpq_get_str(para1: pchar; para2: longint; para3: Tmpq_srcptr): pchar; cdecl; external libgmp name '__gmpq_get_str';
procedure mpq_init(para1: Tmpq_ptr); cdecl; external libgmp name '__gmpq_init';
procedure mpq_inits(para1: Tmpq_ptr); varargs; cdecl; external libgmp name '__gmpq_inits';
function mpq_inp_str(para1: Tmpq_ptr; para2: PFILE; para3: longint): Tsize_t; cdecl; external libgmp name '__gmpq_inp_str';
procedure mpq_inv(para1: Tmpq_ptr; para2: Tmpq_srcptr); cdecl; external libgmp name '__gmpq_inv';
procedure mpq_mul(para1: Tmpq_ptr; para2: Tmpq_srcptr; para3: Tmpq_srcptr); cdecl; external libgmp name '__gmpq_mul';
procedure mpq_mul_2exp(para1: Tmpq_ptr; para2: Tmpq_srcptr; para3: Tmp_bitcnt_t); cdecl; external libgmp name '__gmpq_mul_2exp';
procedure mpq_neg(para1: Tmpq_ptr; para2: Tmpq_srcptr); cdecl; external libgmp name '__gmpq_neg';
function mpq_out_str(para1: PFILE; para2: longint; para3: Tmpq_srcptr): Tsize_t; cdecl; external libgmp name '__gmpq_out_str';
procedure mpq_set(para1: Tmpq_ptr; para2: Tmpq_srcptr); cdecl; external libgmp name '__gmpq_set';
procedure mpq_set_d(para1: Tmpq_ptr; para2: double); cdecl; external libgmp name '__gmpq_set_d';
procedure mpq_set_den(para1: Tmpq_ptr; para2: Tmpz_srcptr); cdecl; external libgmp name '__gmpq_set_den';
procedure mpq_set_f(para1: Tmpq_ptr; para2: Tmpf_srcptr); cdecl; external libgmp name '__gmpq_set_f';
procedure mpq_set_num(para1: Tmpq_ptr; para2: Tmpz_srcptr); cdecl; external libgmp name '__gmpq_set_num';
procedure mpq_set_si(para1: Tmpq_ptr; para2: longint; para3: dword); cdecl; external libgmp name '__gmpq_set_si';
function mpq_set_str(para1: Tmpq_ptr; para2: pchar; para3: longint): longint; cdecl; external libgmp name '__gmpq_set_str';
procedure mpq_set_ui(para1: Tmpq_ptr; para2: dword; para3: dword); cdecl; external libgmp name '__gmpq_set_ui';
procedure mpq_set_z(para1: Tmpq_ptr; para2: Tmpz_srcptr); cdecl; external libgmp name '__gmpq_set_z';
procedure mpq_sub(para1: Tmpq_ptr; para2: Tmpq_srcptr; para3: Tmpq_srcptr); cdecl; external libgmp name '__gmpq_sub';
procedure mpq_swap(para1: Tmpq_ptr; para2: Tmpq_ptr); cdecl; external libgmp name '__gmpq_swap';
{*************** Float (i.e. F) routines.  *************** }
procedure mpf_abs(para1: Tmpf_ptr; para2: Tmpf_srcptr); cdecl; external libgmp name '__gmpf_abs';
procedure mpf_add(para1: Tmpf_ptr; para2: Tmpf_srcptr; para3: Tmpf_srcptr); cdecl; external libgmp name '__gmpf_add';
procedure mpf_add_ui(para1: Tmpf_ptr; para2: Tmpf_srcptr; para3: dword); cdecl; external libgmp name '__gmpf_add_ui';
procedure mpf_ceil(para1: Tmpf_ptr; para2: Tmpf_srcptr); cdecl; external libgmp name '__gmpf_ceil';
procedure mpf_clear(para1: Tmpf_ptr); cdecl; external libgmp name '__gmpf_clear';
procedure mpf_clears(para1: Tmpf_ptr); varargs; cdecl; external libgmp name '__gmpf_clears';
function mpf_cmp(para1: Tmpf_srcptr; para2: Tmpf_srcptr): longint; cdecl; external libgmp name '__gmpf_cmp';
function mpf_cmp_z(para1: Tmpf_srcptr; para2: Tmpz_srcptr): longint; cdecl; external libgmp name '__gmpf_cmp_z';
function mpf_cmp_d(para1: Tmpf_srcptr; para2: double): longint; cdecl; external libgmp name '__gmpf_cmp_d';
function mpf_cmp_si(para1: Tmpf_srcptr; para2: longint): longint; cdecl; external libgmp name '__gmpf_cmp_si';
function mpf_cmp_ui(para1: Tmpf_srcptr; para2: dword): longint; cdecl; external libgmp name '__gmpf_cmp_ui';
procedure mpf_div(para1: Tmpf_ptr; para2: Tmpf_srcptr; para3: Tmpf_srcptr); cdecl; external libgmp name '__gmpf_div';
procedure mpf_div_2exp(para1: Tmpf_ptr; para2: Tmpf_srcptr; para3: Tmp_bitcnt_t); cdecl; external libgmp name '__gmpf_div_2exp';
procedure mpf_div_ui(para1: Tmpf_ptr; para2: Tmpf_srcptr; para3: dword); cdecl; external libgmp name '__gmpf_div_ui';
procedure mpf_dump(para1: Tmpf_srcptr); cdecl; external libgmp name '__gmpf_dump';
function mpf_eq(para1: Tmpf_srcptr; para2: Tmpf_srcptr; para3: Tmp_bitcnt_t): longint; cdecl; external libgmp name '__gmpf_eq';
function mpf_fits_sint_p(para1: Tmpf_srcptr): longint; cdecl; external libgmp name '__gmpf_fits_sint_p';
function mpf_fits_slong_p(para1: Tmpf_srcptr): longint; cdecl; external libgmp name '__gmpf_fits_slong_p';
function mpf_fits_sshort_p(para1: Tmpf_srcptr): longint; cdecl; external libgmp name '__gmpf_fits_sshort_p';
function mpf_fits_uint_p(para1: Tmpf_srcptr): longint; cdecl; external libgmp name '__gmpf_fits_uint_p';
function mpf_fits_ulong_p(para1: Tmpf_srcptr): longint; cdecl; external libgmp name '__gmpf_fits_ulong_p';
function mpf_fits_ushort_p(para1: Tmpf_srcptr): longint; cdecl; external libgmp name '__gmpf_fits_ushort_p';
procedure mpf_floor(para1: Tmpf_ptr; para2: Tmpf_srcptr); cdecl; external libgmp name '__gmpf_floor';
function mpf_get_d(para1: Tmpf_srcptr): double; cdecl; external libgmp name '__gmpf_get_d';
function mpf_get_d_2exp(para1: Plongint; para2: Tmpf_srcptr): double; cdecl; external libgmp name '__gmpf_get_d_2exp';
function mpf_get_default_prec: Tmp_bitcnt_t; cdecl; external libgmp name '__g';
function mpf_get_prec(para1: Tmpf_srcptr): Tmp_bitcnt_t; cdecl; external libgmp name '__gmpf_get_prec';
function mpf_get_si(para1: Tmpf_srcptr): longint; cdecl; external libgmp name '__gmpf_get_si';
function mpf_get_str(para1: pchar; para2: Pmp_exp_t; para3: longint; para4: Tsize_t; para5: Tmpf_srcptr): pchar; cdecl; external libgmp name '__gmpf_get_str';
function mpf_get_ui(para1: Tmpf_srcptr): dword; cdecl; external libgmp name '__gmpf_get_ui';
procedure mpf_init(para1: Tmpf_ptr); cdecl; external libgmp name '__gmpf_init';
procedure mpf_init2(para1: Tmpf_ptr; para2: Tmp_bitcnt_t); cdecl; external libgmp name '__gmpf_init2';
procedure mpf_inits(para1: Tmpf_ptr); varargs; cdecl; external libgmp name '__gmpf_inits';
procedure mpf_init_set(para1: Tmpf_ptr; para2: Tmpf_srcptr); cdecl; external libgmp name '__gmpf_init_set';
procedure mpf_init_set_d(para1: Tmpf_ptr; para2: double); cdecl; external libgmp name '__gmpf_init_set_d';
procedure mpf_init_set_si(para1: Tmpf_ptr; para2: longint); cdecl; external libgmp name '__gmpf_init_set_si';
function mpf_init_set_str(para1: Tmpf_ptr; para2: pchar; para3: longint): longint; cdecl; external libgmp name '__gmpf_init_set_str';
procedure mpf_init_set_ui(para1: Tmpf_ptr; para2: dword); cdecl; external libgmp name '__gmpf_init_set_ui';
function mpf_inp_str(para1: Tmpf_ptr; para2: PFILE; para3: longint): Tsize_t; cdecl; external libgmp name '__gmpf_inp_str';
function mpf_integer_p(para1: Tmpf_srcptr): longint; cdecl; external libgmp name '__gmpf_integer_p';
procedure mpf_mul(para1: Tmpf_ptr; para2: Tmpf_srcptr; para3: Tmpf_srcptr); cdecl; external libgmp name '__gmpf_mul';
procedure mpf_mul_2exp(para1: Tmpf_ptr; para2: Tmpf_srcptr; para3: Tmp_bitcnt_t); cdecl; external libgmp name '__gmpf_mul_2exp';
procedure mpf_mul_ui(para1: Tmpf_ptr; para2: Tmpf_srcptr; para3: dword); cdecl; external libgmp name '__gmpf_mul_ui';
procedure mpf_neg(para1: Tmpf_ptr; para2: Tmpf_srcptr); cdecl; external libgmp name '__gmpf_neg';
function mpf_out_str(para1: PFILE; para2: longint; para3: Tsize_t; para4: Tmpf_srcptr): Tsize_t; cdecl; external libgmp name '__gmpf_out_str';
procedure mpf_pow_ui(para1: Tmpf_ptr; para2: Tmpf_srcptr; para3: dword); cdecl; external libgmp name '__gmpf_pow_ui';
procedure mpf_random2(para1: Tmpf_ptr; para2: Tmp_size_t; para3: Tmp_exp_t); cdecl; external libgmp name '__gmpf_random2';
procedure mpf_reldiff(para1: Tmpf_ptr; para2: Tmpf_srcptr; para3: Tmpf_srcptr); cdecl; external libgmp name '__gmpf_reldiff';
procedure mpf_set(para1: Tmpf_ptr; para2: Tmpf_srcptr); cdecl; external libgmp name '__gmpf_set';
procedure mpf_set_d(para1: Tmpf_ptr; para2: double); cdecl; external libgmp name '__gmpf_set_d';
procedure mpf_set_default_prec(para1: Tmp_bitcnt_t); cdecl; external libgmp name '__gmpf_set_default_prec';
procedure mpf_set_prec(para1: Tmpf_ptr; para2: Tmp_bitcnt_t); cdecl; external libgmp name '__gmpf_set_prec';
procedure mpf_set_prec_raw(para1: Tmpf_ptr; para2: Tmp_bitcnt_t); cdecl; external libgmp name '__gmpf_set_prec_raw';
procedure mpf_set_q(para1: Tmpf_ptr; para2: Tmpq_srcptr); cdecl; external libgmp name '__gmpf_set_q';
procedure mpf_set_si(para1: Tmpf_ptr; para2: longint); cdecl; external libgmp name '__gmpf_set_si';
function mpf_set_str(para1: Tmpf_ptr; para2: pchar; para3: longint): longint; cdecl; external libgmp name '__gmpf_set_str';
procedure mpf_set_ui(para1: Tmpf_ptr; para2: dword); cdecl; external libgmp name '__gmpf_set_ui';
procedure mpf_set_z(para1: Tmpf_ptr; para2: Tmpz_srcptr); cdecl; external libgmp name '__gmpf_set_z';
function mpf_size(para1: Tmpf_srcptr): Tsize_t; cdecl; external libgmp name '__gmpf_size';
procedure mpf_sqrt(para1: Tmpf_ptr; para2: Tmpf_srcptr); cdecl; external libgmp name '__gmpf_sqrt';
procedure mpf_sqrt_ui(para1: Tmpf_ptr; para2: dword); cdecl; external libgmp name '__gmpf_sqrt_ui';
procedure mpf_sub(para1: Tmpf_ptr; para2: Tmpf_srcptr; para3: Tmpf_srcptr); cdecl; external libgmp name '__gmpf_sub';
procedure mpf_sub_ui(para1: Tmpf_ptr; para2: Tmpf_srcptr; para3: dword); cdecl; external libgmp name '__gmpf_sub_ui';
procedure mpf_swap(para1: Tmpf_ptr; para2: Tmpf_ptr); cdecl; external libgmp name '__gmpf_swap';
procedure mpf_trunc(para1: Tmpf_ptr; para2: Tmpf_srcptr); cdecl; external libgmp name '__gmpf_trunc';
procedure mpf_ui_div(para1: Tmpf_ptr; para2: dword; para3: Tmpf_srcptr); cdecl; external libgmp name '__gmpf_ui_div';
procedure mpf_ui_sub(para1: Tmpf_ptr; para2: dword; para3: Tmpf_srcptr); cdecl; external libgmp name '__gmpf_ui_sub';
procedure mpf_urandomb(para1: Tmpf_ptr; para2: Tgmp_randstate_ptr; para3: Tmp_bitcnt_t); cdecl; external libgmp name '__gmpf_urandomb';
{*********** Low level positive-integer (i.e. N) routines.  *********** }
function mpn_add(para1: Tmp_ptr; para2: Tmp_srcptr; para3: Tmp_size_t; para4: Tmp_srcptr; para5: Tmp_size_t): Tmp_limb_t; cdecl; external libgmp name '__gmpn_add';
function mpn_add_1(para1: Tmp_ptr; para2: Tmp_srcptr; para3: Tmp_size_t; para4: Tmp_limb_t): Tmp_limb_t; cdecl; external libgmp name '__gmpn_add_1';
function mpn_add_n(para1: Tmp_ptr; para2: Tmp_srcptr; para3: Tmp_srcptr; para4: Tmp_size_t): Tmp_limb_t; cdecl; external libgmp name '__gmpn_add_n';
function mpn_addmul_1(para1: Tmp_ptr; para2: Tmp_srcptr; para3: Tmp_size_t; para4: Tmp_limb_t): Tmp_limb_t; cdecl; external libgmp name '__gmpn_addmul_1';
function mpn_cmp(para1: Tmp_srcptr; para2: Tmp_srcptr; para3: Tmp_size_t): longint; cdecl; external libgmp name '__gmpn_cmp';
function mpn_zero_p(para1: Tmp_srcptr; para2: Tmp_size_t): longint; cdecl; external libgmp name '__gmpn_zero_p';
procedure mpn_divexact_1(para1: Tmp_ptr; para2: Tmp_srcptr; para3: Tmp_size_t; para4: Tmp_limb_t); cdecl; external libgmp name '__gmpn_divexact_1';
function mpn_divexact_by3c(para1: Tmp_ptr; para2: Tmp_srcptr; para3: Tmp_size_t; para4: Tmp_limb_t): Tmp_limb_t; cdecl; external libgmp name '__gmpn_divexact_by3c';
function mpn_divrem(para1: Tmp_ptr; para2: Tmp_size_t; para3: Tmp_ptr; para4: Tmp_size_t; para5: Tmp_srcptr; para6: Tmp_size_t): Tmp_limb_t; cdecl; external libgmp name '__gmpn_divrem';
function mpn_divrem_1(para1: Tmp_ptr; para2: Tmp_size_t; para3: Tmp_srcptr; para4: Tmp_size_t; para5: Tmp_limb_t): Tmp_limb_t; cdecl; external libgmp name '__gmpn_divrem_1';
function mpn_divrem_2(para1: Tmp_ptr; para2: Tmp_size_t; para3: Tmp_ptr; para4: Tmp_size_t; para5: Tmp_srcptr): Tmp_limb_t; cdecl; external libgmp name '__gmpn_divrem_2';
